# Acontext

./: README.md  readme.md
.github/: .git_commit_template.txt
.github/workflows/: cli-release.yaml  client-release-ts.yaml
docs/: docs.json  index.mdx
docs/api-reference/: openapi.json
docs/learn/: search-skills.mdx
src/client/acontext-py/: README.md  pyproject.toml
src/server/: .env.example  docker-compose.yaml
src/server/api/: Makefile
src/server/core/: README.md  api.py  core_asgi.py  pyproject.toml
src/server/core/acontext_core/: __init__.py  entry.py
src/server/core/acontext_core/infra/: async_mq.py  db.py
src/server/core/acontext_core/llm/agent/: space_construct.py  task.py  task_sop.py
src/server/core/acontext_core/llm/prompt/: task.py  task_sop.py
src/server/core/acontext_core/llm/tool/space_lib/: insert_candidate_data_as_content.py  ls.py
src/server/core/acontext_core/schema/: config.py  env.py  result.py
src/server/core/acontext_core/schema/mq/: session.py  sop.py  space.py
src/server/core/acontext_core/schema/orm/: base.py  task.py
src/server/core/acontext_core/service/: __init__.py  constants.py  insert_new_message.py  space_task.py
src/server/core/acontext_core/service/controller/: space_sop.py  space_task.py
src/server/core/acontext_core/service/data/: block_nav.py  block_search.py  session.py  task.py
src/server/core/acontext_core/util/: handler_spec.py
src/server/core/tests/: test_api.py
src/server/core/tests/schema/: test_result.py
src/server/core/tests/service/: test_block_nav.py  test_block_write_data.py
(+85 files in other folders)
