[project]
name = "acontext_core"
version = "0.0.1.dev"
description = "Core for Acontext"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.7",
    "aiobotocore>=2.24.2",
    "anthropic>=0.67.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "openai>=1.95.1",
    "pgvector>=0.4.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "structlog>=25.4.0",
    "tiktoken>=0.9.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-asyncio>=1.0.0", "pytest-cov>=6.2.1"]
